--- a/public/i18n/trad.json
+++ b/public/i18n/trad.json
@@ -8,7 +8,7 @@
     "take_a_look_around": "Voyez par vous-même",
     "footer": "Cloe Chaudron Beauty est une artiste maquilleuse et coiffeuse installée dans le Luberon, spécialisée dans les prestations de beauté pour les mariages, les séances photo, et bien d'autres événements. Elle se déplace partout en France et en Europe pour offrir ses services professionnels.",
     "inquire": "Contacter",
-    "explore_the_gallery": "Explorez la gallerie",
+    "explore_the_gallery": "Explorez la galerie",
     "about_0": "Bienvenue sur mon site. C'est l'endroit idéal pour en découvrir davantage sur moi. Voici donc un aperçu de mon parcours.",
     "about_1": "Je suis née et j'ai grandi dans le Luberon, cet écrin de nature où le temps semble suspendu. En 2018, j'ai pris la décision de suivre ma passion de toujours et de devenir maquilleuse artistique. C'est au cours de ma formation de deux ans que j'ai découvert l'univers du mariage, notamment à travers des cours pratiques de coiffure et de maquillage. C'est alors que j'ai su que je voulais me lancer dans cette voie dès l'obtention de mon diplôme en 2020.",
     "about_2": "Je puise mon inspiration dans l'élégance et la palette de couleurs du Luberon, un territoire où la beauté de la nature se marie harmonieusement avec la douceur de vivre. Cette région, avec ses paysages pittoresques et ses nuances subtiles, nourrit ma créativité et m'inspire à créer des maquillages raffinés et intemporels, qui mettent en valeur la beauté unique de chaque mariée, tout en restant fidèles à l'esprit naturel et lumineux de ce lieu enchanteur.",
