Mise à jour via éditeur Angular

--- a/docs/i18n/trad.json
+++ b/docs/i18n/trad.json
@@ -1,6 +1,6 @@
 {
   "fr": {
-    "meet_the_artist": "Rencontrez l'artiste",
+    "meet_the_artist": "Rencontrez l'artiste !",
     "accueil_0_0": "Offrez-vous une expérience unique de maquillage et de coiffure sur-mesure, pensée spécialement pour vous. Avec une expertise intemporelle et élégante, mon objectif est de faire ressortir votre essence et votre vision, en veillant à ce que chaque détail soit parfaitement maîtrisé pour sublimer votre beauté et vous faire sentir exceptionnelle le jour de votre mariage.",
     "accueil_0_1": "Au-delà des techniques de maquillage et de coiffure, je crois fermement que l'établissement d'une relation de confiance et d'écoute est essentiel pour garantir une expérience de mariage agréable et inoubliable. Je m'engage à créer une ambiance chaleureuse et bienveillante, vous offrant ainsi confort et assurance tout au long de votre journée, afin que vous viviez ce moment clé de manière sereine.",
     "accueil_0_2": "Ensemble, imaginons le look de mariée idéal qui sublimera vos traits avec élégance et délicatesse, pour que vous rayonnez de grâce et de sérénité en marchant vers l'autel.",
